[project]
name = "etf-rebalancer"
version = "0.1.0"
description = "월 적립식 ETF 포트폴리오 리밸런싱 계산기"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-httpx>=0.35.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
